# ensemblelab

./: .gitignore  LICENSE  README.md  README.txt  TODO.md  environment.yml  main.py  pipeline.ipynb  pyproject.toml  requirements.txt  test.ipynb
docs/: PROJECT_CONTEXT.md  RESEARCH_LOG.md
examples/: caffeine.py  ethanol.py
notebooks/: testing.ipynb
src/: clustering.py  entropy.py  filtering.py  generation.py  metrics.py  optimization.py  rmsd.py  solvents.py  torsion.py  visualization.py
src/ensemblelab/: __init__.py  clustering.py  descriptors.py  filter.py  generators.py  io.py  optimize.py  report.py  utils.py
tests/: test_generators.py
