[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ensemblelab"
version = "0.1.0"
description = "Ensemble descriptors for molecular conformational flexibility."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ensemblelab contributors" }]
dependencies = ["ase>=3.28", "numpy>=1.26", "rdkit>=2024.3"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/ensemblelab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
